# vertex-theme

./: .gitignore  AUTHORS  Makefile.am  README  README.md  build.sh  configure.ac
Chrome/: Vertex-light.crx  Vertex.crx
Ubuntu-Software-Center/: README  softwarecenter.css
Vertex-Cinnamon/cinnamon/: cinnamon.css  theme.json
Vertex-GS/gnome-shell/: gnome-shell-no-crash.css  gnome-shell.css
Vertex-Gnome-Shell-3.16/gnome-shell/: _common.scss  gnome-shell.css
Vertex-Gnome-Shell/gnome-shell/: gnome-classic.css  gnome-shell-no-crash.css  gnome-shell.css
Vertex-gtk/: index.theme  index.theme-dark  index.theme-light
Vertex-gtk-3.10-3.12/: index.theme-dark
Vertex-gtk-3.10-3.12/gtk-2.0/: gtkrc-light  panel.rc
Vertex-gtk-3.10-3.12/gtk-2.0-dark/: panel.rc
Vertex-gtk-3.10-3.12/gtk-3.0/: borders.txt  darker-tabs.css  gnome-applications-darker-overrides.css  gnome-applications.css  gtk-dark.css  gtk-main-common.css  gtk-main-darker.css  gtk-widgets-darker-overrides.css  gtk-widgets.css  gtk.css  unity-darker.css
Vertex-gtk-3.10-3.12/metacity-1/: metacity-theme-1-dark.xml  metacity-theme-2-light.xml  metacity-theme-3-dark.xml
Vertex-gtk-3.10-3.12/xfwm4-light/: bottom-right-inactive.xpm  close-active.xpm  close-inactive.xpm  close-prelight.xpm  close-pressed.xpm  (+25 more)
Vertex-gtk-3.14/: index.theme  index.theme-dark  index.theme-light
common/: Makefile.am
common/cinnamon/: cinnamon.css  theme.json
common/gnome-shell/3.14/: gnome-shell.css
common/gnome-shell/3.16/: _common.scss  _drawing.scss  gnome-shell.css  parse-sass.sh
common/gnome-shell/3.16/sass/: _colors.scss  _common.scss
common/gnome-shell/3.18/: _common.scss  _drawing.scss  gnome-shell.css  gnome-shell.scss
common/gnome-shell/3.18/sass/: _common.scss
common/gnome-shell/3.20/: README.md  gnome-shell.css
common/gnome-shell/3.20/sass/: _common.scss  _drawing.scss
common/gtk-2.0/: gtkrc  gtkrc-light
common/gtk-2.0-dark/: gtkrc
common/gtk-3.0/3.10/: assets.txt  gnome-applications-darker-overrides.css  gtk-contained.css  gtk-main-dark.css  gtk-main-darker.css  gtk-main.css  gtk-widgets-3_10-dark-overrides.css  gtk-widgets-3_10-darker-overrides.css  gtk-widgets-3_10.css  gtk-widgets-backgrounds.css  gtk-widgets-borders-darker-overrides.css  gtk-widgets-borders.css  gtk-widgets-darker-overrides.css  gtk-widgets.css  unity-darker.css  unity.css
common/gtk-3.0/3.12/: assets.txt  dark-tabs.css  gnome-applications-dark-overrides.css  gtk-light.css  gtk-main-dark.css  gtk-main.css  gtk-widgets-assets-dark.css  gtk-widgets-assets.css  gtk-widgets-dark-overrides.css  tabs.css  window-controls-dark-overrides.css  window-controls-darker-overrides.css  window-controls.css
common/gtk-3.0/3.14/: _applications.scss  _common.scss  _tabs.scss  _unity.scss  assets.txt  gtk-contained-dark.css  gtk-contained-light.css  gtk-contained.css  gtk-dark.css  gtk-light.css  gtk.css
common/gtk-3.0/3.16/: _applications.scss  _colors.scss  _common.scss  _unity.scss  gtk-contained-dark.css  gtk-contained-light.css  gtk-contained.css  gtk-dark.css  gtk-light.css  gtk.css
common/gtk-3.0/3.16/sass/: _applications.scss  _colors-public.scss
common/gtk-3.0/3.18/: _applications.scss  _common.scss  _tabs.scss  assets.txt  gtk-contained-dark.css  gtk-contained-dark.scss  gtk-contained-light.css  gtk-contained.css  gtk-dark.css  gtk-light.css  gtk.css
common/gtk-3.0/3.18/sass/: _applications.scss  _budgie.scss  _common.scss  _drawing.scss  gtk-light.scss  gtk.scss
common/gtk-3.0/3.20/: assets.txt  gtk-dark.css  gtk-light.css  gtk.css
common/gtk-3.0/3.20/sass/: _applications.scss  _budgie.scss  _colors.scss  _common.scss  _drawing.scss  _granite.scss  _tabs.scss  _unity.scss  gtk-dark.scss  gtk-light.scss  gtk.scss
common/metacity-1/: metacity-theme-1-dark.xml  metacity-theme-1-light.xml  metacity-theme-1.xml  metacity-theme-2-dark.xml  metacity-theme-2-light.xml  metacity-theme-2.xml  metacity-theme-3-dark.xml  metacity-theme-3-light.xml  metacity-theme-3.xml
common/xfwm4/: bottom-active.xpm  bottom-inactive.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  bottom-right-active.xpm  bottom-right-inactive.xpm  close-inactive.xpm  close-prelight.xpm  hide-prelight.xpm  hide-pressed.xpm  left-active.xpm  left-inactive.xpm  maximize-active.xpm  maximize-pressed.xpm  menu-inactive.xpm  menu-pressed.xpm  right-active.xpm  right-inactive.xpm  shade-active.xpm  stick-active.xpm  stick-inactive.xpm  themerc  title-1-inactive.xpm  top-left-active-shaded.xpm  top-right-active-shaded.xpm  top-right-inactive.xpm
common/xfwm4-light/: bottom-active.xpm  bottom-inactive.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  bottom-right-active.xpm  bottom-right-inactive.xpm  close-active.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-pressed.xpm  left-active.xpm  left-inactive.xpm  menu-inactive.xpm  right-active.xpm  right-inactive.xpm  shade-active.xpm  shade-inactive.xpm  shade-pressed.xpm  stick-active.xpm  themerc  title-1-active-shaded.xpm  title-1-active.xpm  title-2-active.xpm  title-2-inactive.xpm  title-4-active.xpm  title-4-inactive.xpm  top-left-inactive.xpm  top-right-active-shaded.xpm  top-right-active.xpm
extra/: Makefile.am
gnome-shell/: gnome-shell.css
gtk-2.0/: gtkrc  gtkrc-light
gtk-3.0/: applications-dark-overrides.css  applications-darker-overrides.css  applications.css  assets.txt  borders.txt  darker-tabs.css  gnome-applications.css  gtk-fallback.css  gtk-main-common.css  gtk-main-dark.css  gtk-main-darker-3-10.css  gtk-main-darker.css  gtk-main.css  gtk-widgets-3_10-darker-overrides.css  gtk-widgets-3_10.css  gtk-widgets-assets-dark.css  gtk-widgets-assets-darker-overrides.css  gtk-widgets-assets.css  gtk-widgets-backgrounds.css  gtk-widgets-borders-dark.css  gtk-widgets-borders-darker-overrides.css  gtk-widgets-borders.css  gtk-widgets-dark-overrides.css  gtk-widgets-darker-overrides.css  gtk-widgets.css  tabs-dark-overrides.css  tabs-darker-overrides.css  tabs.css  window-controls.css
m4/: pkg-check-var.m4  vertex-enable.m4  vertex-gnome.m4
metacity-1/: metacity-theme-3.xml
(+254 files in other folders)
